Fix bubble background visibility on reduced motion

--- a/app/globals.css
+++ b/app/globals.css
@@ -61,6 +61,7 @@ a {
   left: 8%;
   width: 50px;
   height: 50px;
+  --static-top: 12%;
   animation-duration: 22s;
   animation-delay: -5s;
 }
@@ -69,6 +70,7 @@ a {
   left: 20%;
   width: 74px;
   height: 74px;
+  --static-top: 28%;
   animation-duration: 26s;
   animation-delay: -12s;
 }
@@ -77,6 +79,7 @@ a {
   left: 31%;
   width: 40px;
   height: 40px;
+  --static-top: 20%;
   animation-duration: 18s;
   animation-delay: -8s;
 }
@@ -85,6 +88,7 @@ a {
   left: 43%;
   width: 92px;
   height: 92px;
+  --static-top: 35%;
   animation-duration: 29s;
   animation-delay: -2s;
 }
@@ -93,6 +97,7 @@ a {
   left: 54%;
   width: 56px;
   height: 56px;
+  --static-top: 14%;
   animation-duration: 23s;
   animation-delay: -16s;
 }
@@ -101,6 +106,7 @@ a {
   left: 63%;
   width: 34px;
   height: 34px;
+  --static-top: 42%;
   animation-duration: 19s;
   animation-delay: -9s;
 }
@@ -109,6 +115,7 @@ a {
   left: 71%;
   width: 78px;
   height: 78px;
+  --static-top: 30%;
   animation-duration: 31s;
   animation-delay: -6s;
 }
@@ -117,6 +124,7 @@ a {
   left: 82%;
   width: 46px;
   height: 46px;
+  --static-top: 18%;
   animation-duration: 24s;
   animation-delay: -14s;
 }
@@ -125,6 +133,7 @@ a {
   left: 90%;
   width: 64px;
   height: 64px;
+  --static-top: 44%;
   animation-duration: 28s;
   animation-delay: -18s;
 }
@@ -133,6 +142,7 @@ a {
   left: 15%;
   width: 28px;
   height: 28px;
+  --static-top: 52%;
   animation-duration: 17s;
   animation-delay: -10s;
 }
@@ -157,6 +167,8 @@ a {
 @media (prefers-reduced-motion: reduce) {
   .bubble {
     animation: none;
-    opacity: 0.14;
+    bottom: auto;
+    top: var(--static-top, 20%);
+    opacity: 0.24;
   }
 }
